# localghost

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
coast-macros/: Cargo.toml
coast-macros/src/: lib.rs
examples/counter/: Cargo.toml  index.html
examples/counter/src/: lib.rs
examples/fetch/: index.html
examples/fetch/src/: lib.rs
examples/hello-world/: Cargo.toml  README.md  index.html
examples/hello-world/src/: lib.rs
examples/history/: Cargo.toml  index.html
examples/history/src/: lib.rs
examples/input-form/: Cargo.toml  index.html
examples/input-form/src/: lib.rs
examples/keyboard/: Cargo.toml  README.md  index.html
examples/keyboard/src/: lib.rs
examples/sse/: Cargo.toml  index.html
examples/sse/src/: lib.rs
localghost-macros/: Cargo.toml
localghost-macros/src/: lib.rs
src/: document.rs  document_ready.rs  events.rs  history.rs  lib.rs  location.rs  log.rs  prelude.rs  task.rs  utils.rs  window.rs
src/document/: mod.rs
src/dom/: document.rs  element.rs  element_kind.rs  mod.rs  query_selector.rs  text.rs  window.rs
src/events/: event.rs  event_listener.rs  event_phase.rs  event_target.rs  mod.rs
src/fs/: local_storage.rs  mod.rs
src/keyboard/: key_kind.rs  keyboard.rs  keyboard_event.rs  mod.rs  modifier_key.rs
src/net/: beacon.rs  body.rs  event_source.rs  fetch.rs  headers.rs  message_event.rs  mod.rs  request.rs  response.rs  sse.rs
src/task/: animation_frame.rs  animation_loop.rs  idle.rs  mod.rs  spawn.rs  spawn_local.rs
tests/: document_ready.rs  lib.rs  net.rs  task.rs  test.rs
tests/browser/: document_ready.rs  log.rs  mod.rs  net.rs  task.rs
