[package]
version = "0.0.0"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
categories = []
description = "API bindings for Web APIs"
documentation = "https://docs.rs/coast"
edition = "2018"
keywords = []
license = "MIT OR Apache-2.0"
name = "coast"
readme = "README.md"
repository = "https://github.com/yoshuawuyts/coast"

[dependencies]
futures-channel = "0.3.1"
futures-timer = "3.0.1"
coast-macros = { path = "coast-macros" }
js-sys = "0.3.35"
kv-log-macro = "1.0.4"
log = { version = "0.4.8", features = ["kv_unstable", "std"] }
wasm-bindgen = { version = "0.2.58", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.8"
wasm-bindgen-test = "0.3.8"
async-std = {version = "1.5.0", features = ["unstable"] }
pin-project = "0.4.17"
pin-project-lite = "0.1.5"
# send_wrapper = "0.4.0"

[dependencies.web-sys]
version = "0.3.35"
features = [
    "AddEventListenerOptions",
    "console",
    "Document",
    "Event",
    "EventTarget",
    "Headers",
    "History",
    "HtmlElement",
    "Navigator",
    "Request",
    "RequestInit",
    "Response",
    "Window",
]

[dev-dependencies]

[features]
