[package]
version = "0.1.0"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
categories = []
description = "Ergonomic Rust bindings to the Web platform"
documentation = "https://docs.rs/localghost"
edition = "2018"
keywords = []
license = "MIT OR Apache-2.0"
name = "localghost"
readme = "README.md"
repository = "https://github.com/mild-times/localghost"

[dependencies]
futures-channel = "0.3.1"
futures-timer = "3.0.1"
localghost-macros = { path = "localghost-macros", version = "0.0.0" }
js-sys = "0.3.35"
kv-log-macro = "1.0.4"
log = { version = "0.4.8", features = ["kv_unstable", "std"] }
wasm-bindgen = { version = "0.2.58", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.8"
wasm-bindgen-test = "0.3.8"
async-std = {version = "1.5.0", features = ["unstable"] }
pin-project = "0.4.17"
pin-project-lite = "0.1.5"
console_error_panic_hook = "0.1.6"
async-channel = "1.5.1"
# send_wrapper = "0.4.0"

[dependencies.web-sys]
version = "0.3.35"
features = [
    "AddEventListenerOptions",
    "console",
    "Document",
    "Element",
    "Event",
    "EventSource",
    "EventTarget",
    "Location",
    "Headers",
    "History",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Navigator",
    "NodeList",
    "ReadableStream",
    "Request",
    "RequestInit",
    "Response",
    "Storage",
    "Text",
    "Window",
]

[dev-dependencies]

[features]
