[package]
version = "0.2.1"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
categories = []
description = "Ergonomic Rust bindings to the Web platform"
documentation = "https://docs.rs/localghost"
edition = "2018"
keywords = []
license = "MIT OR Apache-2.0"
name = "localghost"
readme = "README.md"
repository = "https://github.com/mild-times/localghost"

[dependencies]
async-channel = "1.5.1"
console_error_panic_hook = "0.1.6"
futures-channel = "0.3.12"
futures-core = "0.3.12"
futures-timer = "3.0.2"
js-sys = "0.3.47"
kv-log-macro = "1.0.7"
localghost-macros = { path = "localghost-macros", version = "0.1.0" }
log = { version = "0.4.14", features = ["kv_unstable_std"] }
pin-project = "1.0.5"
pin-project-lite = "0.2.4"
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.20"
wasm-bindgen-test = "0.3.20"

[dependencies.web-sys]
version = "0.3.47"
features = [
    "AddEventListenerOptions",
    "console",
    "Document",
    "Element",
    "Event",
    "EventSource",
    "EventTarget",
    "Location",
    "Headers",
    "History",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Navigator",
    "NodeList",
    "ReadableStream",
    "Request",
    "RequestInit",
    "Response",
    "Storage",
    "Text",
    "Window",
]

[dev-dependencies]
async-std = { version = "1.9.0", features = ["unstable"] }

[features]
