[package]
name = "localghost-counter"
version = "0.1.0"
authors = [
  "Yoshua Wuyts <yoshuawuyts@gmail.com>",
  "Nick Fitzgerald <fitzgen@gmail.com>", # Authored dodrio and the original examples
]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
localghost = { path = "../.." }

[dev-dependencies]
wasm-bindgen-test = "0.3.5"
